--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
 ::-webkit-scrollbar { 
     display: none;  /* Safari and Chrome */
 }
+
+.text-shadow {
+    text-shadow: 0px 1px 2px rgb(30 29 39 / 19%), 1px 2px 4px rgb(54 64 147 / 18%)
+}
